[metadata]
url = https://github.com/dPys/emc
author = The emc developers
author_email = dpisner@utexas.edu
maintainers = Derek Pisner & Ariel Rokem
maintainer_email = dpisner@utexas.edu & arokem@gmail.com
description = Pure python eddy-current and head-motion correction for dMRI, an extension of QSIprep's SHOREline algorithm (Cieslak, 2020) to multiple diffusion models.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License, Version 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.5
install_requires =
    imageio>=2.9.0
    seaborn>=0.11.1
    dipy>=1.3.0
    pyyaml>=5.1.0
    templateflow>=0.6.2
    scikit_learn>=0.23.0
    matplotlib<=3.3.0,>=3.0.0
    scikit-image>=0.14.2
    dmriprep>=0.5.0rc
    joblib>=0.13.2
    mlens>=0.2.3
test_requires =
    codecov
    coverage
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit = duecredit
resmon = psutil >=5.4
popylar = popylar >= 0.2
style =
    flake8 >= 3.7.0
test =
    pytest >= 4.4
    pytest-xdist >= 1.28
    pytest-cov
    coverage
tests =
    %(test)s
all =
    %(doc)s
    %(resmon)s
    %(popylar)s
    %(tests)s

[versioneer]
VCS = git
style = pep440
versionfile_source = emc/_version.py
versionfile_build = emc/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
exclude=
    *build/
    docs/
select = C,E,F,W,B,B950
ignore = N802,N806,W504,E203
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501

[tool:pytest]
norecursedirs = .* _*
addopts = -vx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
