[metadata]
name = eddymotion
author = Derek Pisner
author_email = dpisner@utexas.edu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Pure python eddy-current and head-motion correction for dMRI, an extension of QSIprep's SHOREline algorithm (Cieslak, 2020) to multiple diffusion models.
license = Apache License, Version 2.0
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
maintainers = The NiPreps developers
maintainer_email = nipreps@gmail.com, dpisner@utexas.edu
url = https://github.com/nipreps/EddyMotionCorrection

[options]
python_requires = >=3.7
install_requires =
    dipy>=1.3.0
    scikit-image>=0.14.2
    nest-asyncio>=1.5.1
test_requires =
    codecov
    coverage
    pytest
packages = find:
include_package_data = True
zip_safe = True

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
plotting = nilearn
resmon = psutil >=5.4
popylar = popylar >= 0.2
style =
    flake8 >= 3.7.0
test =
    pytest >= 4.4
    pytest-xdist >= 1.28
    pytest-cov
    coverage
tests =
    %(test)s
all =
    %(doc)s
    %(resmon)s
    %(popylar)s
    %(tests)s

[flake8]
max-line-length = 99
doctests = False
exclude=
    *build/
    docs/
select = C,E,F,W,B,B950
ignore = N802,N806,W504,E203
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501

[tool:pytest]
norecursedirs = .* _*
addopts = -vx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
