[metadata]
name = eddymotion
author = Derek Pisner
author_email = dpysalexander@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Pure python eddy-current and head-motion correction for dMRI, an extension of QSIprep's SHOREline algorithm (Cieslak, 2020) to multiple diffusion models.
license = Apache License, Version 2.0
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
maintainers = The NiPreps developers
maintainer_email = nipreps@gmail.com, dpysalexander@gmail.com
url = https://github.com/nipreps/eddymotion

[options]
python_requires = >=3.7
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6.2
    wheel
install_requires =
    dipy>=1.3.0
    joblib
    nipype>= 1.5.1, < 2.0
    nitransforms>=21.0.0
    nest-asyncio>=1.5.1
    scikit-image>=0.14.2
    scikit-learn>=1.0.1
test_requires =
    codecov
    coverage
    pytest
packages = find_namespace:
package_dir=
    = src
include_package_data = True
zip_safe = True

[options.packages.find]
where = src
include = eddymotion*
exclude =
    test
    test.*

[options.package_data]
eddymotion.config =
    *.json

[options.exclude_package_data]
* = test

[options.extras_require]
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
plotting = nilearn
resmon = psutil >=5.4
popylar = popylar >= 0.2
style =
    flake8 >= 3.7.0
test =
    pytest >= 4.4
    pytest-xdist >= 1.28
    pytest-env
    pytest-cov
    coverage
tests =
    %(test)s
dev =
    black~=22.3
    flake8~=4.0
    isort~=5.10
    pre-commit
    pre-commit-hooks
    %(docs)s
    %(test)s
all =
    %(doc)s
    %(resmon)s
    %(popylar)s
    %(tests)s
    %(dev)s

[flake8]
max-line-length = 99
doctests = False
exclude=
    *build/
    docs/
select = C,E,F,W,B,B950
ignore = N802,N806,W503,E203
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501

[tool:pytest]
pythonpath = src/ test/
norecursedirs = .* _*
addopts = -v --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
